--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,26 @@
-name: Deploy
+name: Deploy to Server
+
 on:
   push:
     branches:
-      - master
+      - main
+
 jobs:
-  build:
-  
+  deploy:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.6]
-        
+
     steps:
-      - uses: actions/checkout@v3
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@master
-        with:
-          host: 143.198.26.90
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: 22
-          script: |
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Deploy to Server
+      uses: appleboy/ssh-action@master
+      with:
+        host: 143.198.26.90
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: 22
+        script: |
+          cd /root/devopss-hw
+          git pull origin master  # Пример команды, чтобы получить изменения из репозитория
+          # Добавь другие команды, которые нужно выполнить на сервере после обновления кода
