--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,13 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
+  
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.6]
 
     steps:
     - uses: actions/checkout@v3
