--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,33 @@
-name: Deploy to Server
+name: Deploy
 
 on:
   push:
     branches:
-      - main
 
+      - main
+        
 jobs:
   build:
+      
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 4
       matrix:
-        python-version: ["3.10"]
-
+        python-version: [3.6]
+            
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
       with:
-          python-version: ${{ matrix.python-version }}
-   
-          
-    - name: install ssh keys
-      run: |
-          install -m 600 -D /dev/null ~/.ssh/id_rsa
-          echo "${{ secrets.TOKEN }}" > ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.HOST }} > ~/.ssh/known_hosts
-    - name: connect and pull
-      run: ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd root/devopss-hw && git checkout main && git pull"
+        host: 143.198.26.90
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: 22
+        script: |
+          root/devopss-hw
+          source ./venv/bin/activate
+          git pull
+          python manage.py migrate
+          python manage.py collectstatic --noinput
+          supervisorctl restart all
