--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: 22
         script: |
-          cd root/devopss-hw
+          cd /root/devopss-hw
           source ./venv/bin/activate
           git pull
           python manage.py migrate
