--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
           git pull
           python manage.py migrate
           python manage.py collectstatic --noinput
-          supervisorctl restart all
+          supervisorctl restart test_django_app
